[package]
name = "geodesy"
description = "Geometric coordinates with units built on absolute_unit."
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
nalgebra = "^ 0.29"
num-traits = "^ 0.2"
absolute_unit = { path = "../../util/absolute_unit" }
physical_constants = { path = "../../util/physical_constants" }

[dev-dependencies]
approx = "^ 0.5"
