[package]
name = "geodesy"
description = "Geometric coordinates with units built on absolute_unit."
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
nalgebra.workspace = true
num-traits.workspace = true
# Internal
absolute_unit.workspace = true
physical_constants.workspace = true

[dev-dependencies]
approx.workspace = true
