[package]
name = "nitrous"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = "^ 0.6"
lalrpop-util = { version = "0.19.4", features = ["lexer"] }
log = "^ 0.4"
futures = "^ 0.3"
ordered-float = "^ 2"
parking_lot = "^ 0.11"
rayon = "= 1.4.0"
regex = "1"
geodesy = { path = "../../util/geodesy" }
nitrous_injector = { path = "../../util/nitrous_injector" }
