[package]
name = "nitrous"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = { version = "^ 0.8", features = ["trace"] }
ellipse = "^ 0.2"
itertools = "^ 0.10"
lalrpop-util = { version = "^ 0.19", features = ["lexer"] }
log = "^ 0.4"
futures = "^ 0.3"
ordered-float = "^ 3"
parking_lot = "^ 0.12"
regex = "1"
geodesy = { path = "../../util/geodesy" }
nitrous_injector = { path = "../../util/nitrous_injector" }
