[package]
name = "nitrous"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
lalrpop.workspace = true

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
ellipse.workspace = true
itertools.workspace = true
lalrpop-util.workspace = true
log.workspace = true
futures.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
regex.workspace = true
# Internal
geodesy.workspace = true
nitrous_injector.workspace = true
