[package]
name = "nitrous_injector"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "^ 1"
proc-macro2 = "^ 1"
syn = "^ 1"
quote = "^ 1"
nitrous  = { path = "../nitrous" }

[dev-dependencies]
log = "^ 0.4"
ordered-float = "^ 2"
parking_lot = "^ 0.11"
