[package]
name = "nitrous_injector"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^ 1"
syn = { version = "= 1.0.62", features = ["default", "extra-traits", "full", "visit"] }
quote = "^ 1"

[dev-dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
log = "^ 0.4"
ordered-float = "^ 2"
parking_lot = "^ 0.11"
nitrous  = { path = "../nitrous" }
