[package]
name = "physical_constants"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
approx.workspace = true
once_cell.workspace = true
# Internal
absolute_unit.workspace = true
